--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,7 +8,6 @@ transport:
 
 provisioner:
   name: dokken
-  policyfile: test/fixtures/policies/default.rb
   deprecations_as_errors: true
 
 verifier:
@@ -60,15 +59,14 @@ platforms:
         - RUN /usr/bin/apt-get update
         - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools sudo -y
 
+  - name: ubuntu-18.04
+    named_run_list: debian
+    driver:
+      image: ubuntu:18.04
+      pid_one_command: /bin/systemd
+      intermediate_instructions:
+        - RUN /usr/bin/apt-get update
+        - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools sudo -y
+
 suites:
   - name: default
-    attributes:
-      nrpe:
-        config:
-          debug: true
-  - name: archive
-    attributes:
-      nrpe:
-        provider: archive
-        config:
-          debug: true
